--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -6,6 +6,14 @@
   --color-light: #f5f5f5;
   --color-white: #ffffff;
   --color-dark: #0f1419;
+  --color-loader-bg: #eaeaea;
+
+  /* Z-index */
+  --z-loader: 9999;
+  --z-header: 1000;
+
+  /* Loader */
+  --loader-font-size: 1vw;
 
   /* Typography */
   --font-primary: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
