--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import './variables.css';
+@import './fonts.css';
 
 /* Reset */
 *, *::before, *::after {
@@ -18,7 +19,7 @@ html {
 }
 
 body {
-  font-family: var(--font-primary);
+  font-family: var(--font-body);
   font-size: var(--font-size-body);
   line-height: 1.6;
   color: var(--color-primary);
@@ -34,8 +35,9 @@ body {
 
 /* Typography */
 h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-heading);
   line-height: 1.2;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 h1 {
