--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,7 +5,7 @@
   --color-accent: #8fbc8f;
   --color-light: #f5f5f5;
   --color-white: #ffffff;
-  --color-dark: #0f1419;
+  --color-dark: #131E30;
   --color-loader-bg: #eaeaea;
 
   /* Z-index */
